--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  
   "name": "my-quiz",
   "version": "0.1.0",
   "private": true,
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10"
   }
